Issue 2: Commented out other attritbues, see if card footer will center align button

--- a/src/components/projects/Project.module.scss
+++ b/src/components/projects/Project.module.scss
@@ -72,21 +72,14 @@
   }
 
   .card__footer {
-    display: flex;
-    justify-content: center;  
-    align-items: center;      
-    padding: 10px;
+    // display: flex;
+    // justify-content: center;  
+    // align-items: center;      
+    // padding: 10px;
     width: 100%;
     text-align: center;
   }
   
-  .card__footer a.button {
-    display: flex;  
-    justify-content: center;
-    align-items: center;
-    width: max-content; 
-    margin: 0 auto;  
-  }
   
   // .card__footer .button {
   //   display: block;  
